Correct alignment of footer social elements when viewed on small devices

--- a/the-odin-project/html-and-css/responsive-tnw-homepage/style.css
+++ b/the-odin-project/html-and-css/responsive-tnw-homepage/style.css
@@ -638,6 +638,19 @@ h2 {
 
 .social {
   padding: 42px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.social li {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
 }
 
 .social a {
